# SC2079-MDP-Group2-2026

./: .gitignore  README.md
algo_service/: README.md  __init__.py  app.py  config.py  grid.py  pathfinding.py  solver.py
algo_service/backend/: README.md  __init__.py  app.py  pathfinding.py  solver.py
algo_service/frontend/: index.html  package-lock.json  package.json  vite.config.js
algo_service/frontend/src/: App.css  App.jsx  Arena.css  Arena.jsx  index.css  simulation.js
imageReg/: .gitignore
imageReg/src/: INSTRUCTION.md  main.py  pc_receiver.py  pi_streamer.py  pyproject.toml  rpi-yolo.py  test-picam2.py
mdp_group_2/: local.properties
robot-path-visualizer/: package-lock.json  package.json
robot-path-visualizer/src/: App.js
rpi/: README.md  algo_interface.py  bluetooth_interface.py  bluetooth_interface_socket.py  camera_interface.py  convert_instructions.py  main.py  obstacle_a5.py  pc_interface.py  stm32_interface.py  task1.py  task2.py
service/: .gitignore  Pipfile  README.md  app.py  response.json
service/pathfinding/: pathfinding_controller.py
service2/: Pipfile  README.md  app.py
service2/pathfinding/: pathfinding_controller.py
stm/: main.c
stm/Inc/: ICM20948.h.txt  ir_sensor.h.txt  main.h.txt  motor.h.txt  odometry.h.txt  pid.h.txt  servo.h.txt  servo_steer.h.txt  stm32f4xx_it.h.txt  ultrasonic.h.txt
stm/Src/: ICM20948.c.txt  ir_sensor.c.txt  main.c.txt  motor.c.txt  odometry.c.txt  oled_SC2104D.c.txt  pid.c.txt  servo.c.txt  servo_steer.c.txt  stm32f4xx_hal_msp.c.txt  stm32f4xx_it.c.txt  ultrasonic.c.txt
(+34 files in other folders)
